--- a/iim/files/iim.conf
+++ b/iim/files/iim.conf
@@ -4,4 +4,14 @@
 # Note : 'local' must be a absolute path-name (start with '/').
 #
 
-local  /path/to/CPAN
+local  {{iim.cpan_local}}
+
+remote cpan.hoovism.com::CPAN
+
+sleep_main_loop 5m
+
+full_sync_interval 1w
+allow_full_syncs 1
+
+max_run_time 8w-15m
+
